--- a/main.css
+++ b/main.css
@@ -66,5 +66,14 @@ p {
 }
 
 #text-intro {
-	
+	border-style: solid ;
+	border-color: red;
+	background-color: rgb(90, 90, 90);
+	margin-left: 5px;
+	margin-right: 5px;
+	padding-left: 5px;
+	padding-right: 5px;
+	border-left: 2px;
+	border-right: 2px;
+	height: 50px;
 }
