--- a/main.css
+++ b/main.css
@@ -66,14 +66,16 @@ p {
 }
 
 #text-intro {
+	text-indent: 3%;
+	text-align: center,left;
+	color: red;
 	border-style: solid ;
 	border-color: red;
-	background-color: rgb(90, 90, 90);
+	border-width: 2px;
+	background-color: rgb(70, 70, 70);
 	margin-left: 5px;
 	margin-right: 5px;
 	padding-left: 5px;
 	padding-right: 5px;
-	border-left: 2px;
-	border-right: 2px;
 	height: 50px;
 }
