added border styling / padding adjustments / margin adjustments to aboutphoto

--- a/main.css
+++ b/main.css
@@ -56,7 +56,16 @@ p {
 }
 
 #about-photo {
-
+	border-style: solid ; /*changes border to solid line*/
+	border-color: red; /*changes border to red*/
+	border-width: 2px; /*adjust border width 2pixels*/
+	margin-left: 5px; /*adjust left margin 5pixels*/
+	margin-right: 5px; /*adjust right margin 5pixels*/
+	margin-top: 10px;  /*adjust top margin by 10px*/
+	padding-left: 10px; /*adjust left padding 10pixels*/
+	padding-right: 10px; /*adjust right padding 10pixels*/
+	padding-top: 10px; /*adjust top of padding 10px*/
+	padding-bottom: 10px; /*adjusts bottom padding 10px*/
 }
 
 #copyright {
