--- a/main.css
+++ b/main.css
@@ -36,12 +36,15 @@ p {
 }
 
 .album-art {
+	display: flex; /*makes about-photo a container*/
+	float: left; /*positions to the left*/
 	border-style: solid ; /*changes border to solid line*/
 	border-color: red; /*changes border to red*/
 	border-width: 2px; /*adjust border width 2pixels*/
 	margin-left: 50px; /*adjust left margin 5pixels*/
-	margin-right: 5px; /*adjust right margin 5pixels*/
-	margin-top: 10px;  /*adjust top margin by 10px*/
+	margin-right: 30px; /*adjust right margin 5pixels*/
+	margin-top: 20px;  /*adjust top margin by 20px*/
+	margin-bottom: 10px; /*adjust bottom margin by 10px*/
 	padding-left: 10px; /*adjust left padding 10pixels*/
 	padding-right: 10px; /*adjust right padding 10pixels*/
 	padding-top: 10px; /*adjust top of padding 10px*/
