added padding bottom to id about

--- a/main.css
+++ b/main.css
@@ -97,6 +97,7 @@ p {
 	margin-top: 10px;  /*adjust top margin by 10px*/
 	padding-left: 5px; /*adjust left padding 5pixels*/
 	padding-right: 5px; /*adjust right padding 5pixels*/
+	padding-bottom: 10px; /*adjust bottom padding by 10px*/
 
 }
 
